tests/baselines/reference/enumDecl1.errors.txt
enumDecl1.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== enumDecl1.ts (1 errors) ====
    declare module mAmbient {
                   ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        enum e {
            x,
            y,
            z
        }
    }
    